GNOME Bugzilla – Bug 760234
playbin: Assumes recursive accept-caps query, breaks totem
Last modified: 2016-01-19 23:14:34 UTC
Created attachment 318377 [details] *:6 log I get "This file cannot be played over the network. Try downloading it locally first." when launching a file with totem directly from the commandline (from the index thing is also broken). The attached log is from jhbuild run totem --gst-debug=\*:6 ~/Videos/g-t.mp4 --gst-plugin-spew --gst-debug-no-color 2>&1 | tee totem.log It's from jhbuild so ignore the gtk warnings. gst-play-1.0 <the same file> does work.
Regression introduced by 7f5f1df59b6573eaee11bb02af53d3799c33552d. Problem here is that playbin checks if a sink supports some caps by doing an accept-caps query. totem sets a bin with a capsfilter as sink, and the capsfilter has an ANY filter.
Might also be a bug in playbin of course, maybe playbin should actually just try intersecting with the caps query result?
To reproduce without Totem: gst-play-1.0 /path/to/foo.flac --audiosink='capsfilter ! pulsesink'
Created attachment 318416 [details] [review] playbin: Use the caps query instead of accept-caps to detect if a sink accepts caps accept-caps is only for one element, caps query is recursive. Fixes playback with totem and other situations.
Comment on attachment 318416 [details] [review] playbin: Use the caps query instead of accept-caps to detect if a sink accepts caps Thanks. This fixes the issue for me.
I'm not sure if this is the right fix though, there's probably a lot of code like the one I changed out there :)
It might also make Thiago's optimizations meaningless.
Attachment 318416 [details] pushed as 844aa3e - playbin: Use the caps query instead of accept-caps to detect if a sink accepts caps
After the commit on : http://cgit.freedesktop.org/gstreamer/gst-plugins-base/commit/?id=844aa3e6a954e76b68f0f0e6e5d829047b2d9f68 Media such as : http://wildhitz.rr.kpnstreaming.nl/b2b/vod/wildhitz/mp4s/Tech_N9ne_-_Strangeulation_Cypher/index.ism/index.m3u8 plays about 4 seconds and then stops playing. This on stb pli50.
That doesn't really make sense and is probably related to some other problem. Can you file a new bug with full debug logs?
Created attachment 318714 [details] Debug log stb pli50 image double stream launch.
I added attachement. A full log is to heavy but here we info and looks like EVENT stream-start is send by stream which is already started.
Please open a new bug report with a as full as possible debug log :)
This one doesn't contain enough information, nothing useful for this specific bug at least.
Yes but due to memory limitations we limited hat we can debug. Off which modules do You need debug ? so I can run them with GST_DEBUG=<module>:5 ?
new bug due to commit : https://bugzilla.gnome.org/show_bug.cgi?id=760477
*** Bug 760867 has been marked as a duplicate of this bug. ***